fix: fix overflow of text content in mobile view

--- a/src/Home.css
+++ b/src/Home.css
@@ -125,7 +125,7 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.65); /* Overlay with transparency */
+  background: rgba(0, 0, 0, 0.55); /* Overlay with transparency */
   z-index: 2;
 }
 
@@ -434,11 +434,6 @@ html {
     background-position-x: -300px;
   }
 
-  .slide {
-    display: flex;
-    justify-content: center;
-  }
-
   .slide img {
     height: 100vh;
     width: 100%;
@@ -452,12 +447,14 @@ html {
   }
 
   .hero-content {
-    width: 90%;
-    border: 1px solid red;
+    width: 100%;
+    max-width: 400px;
+    left: 1rem;
+    top: 18rem;
   }
 
   .hero-content h2 {
-    font-size: 1.8rem;
+    font-size: 1.4rem;
   }
   
   .hero-content__rating {
@@ -465,7 +462,7 @@ html {
     justify-content: space-between;
     flex-wrap: wrap;
     max-width: 200px;
-    padding: 1.5rem 0;
+    padding: 1rem 0;
   }
   
   .people-ratings,
@@ -486,7 +483,7 @@ html {
   .hero-content__description {
     width: 100%;
     line-height: 1.5;
-    padding-bottom: 2rem;
+    padding-bottom: 1.5rem;
   }
   
   .hero-content__description p {
